# mydice

./: CMakeLists.txt  README  README.md  VERSION
cmake/: FindFFTW3.cmake  FindGSL.cmake  SetupFlags.cmake
example/: README  dice.config  dice_counter_rot.config  dice_halo.config  dice_iso.config  dice_iso_gas_halo.config  dice_iso_streams.config  dice_merger.config  dice_minimum.config  dice_protopl.config  dice_satellites.config  dice_spiral.config  dice_star_cloud.config  galaxy1.params  galaxy2.params  streams.params
example/params_files/: counter_rot.params  galaxy1.params  galaxy1.params.gasrc  galaxy1.params.rc  galaxy2.params  galaxy_gas_halo.params  halo.params  minimum.params  protoplanetary_disk.params  spiral.params  star_cloud.params  streams.params
src/: dice.c  dice.h  dice_config.h.in  dice_init.c  dice_io.c  dice_pf.c  dice_structure.c  dice_toolbox.c  dice_vel.c
